Header view UI progress. Improvements and fixes

--- a/FlowrSpot/Resources/Localization/Localizable.strings
+++ b/FlowrSpot/Resources/Localization/Localizable.strings
@@ -19,4 +19,4 @@
 
 "sightings_count" = "%d sightings";
 "favorites_count" = "%d Favorites";
-"comment_count" = "%d Comments";
+"comments_count" = "%d Comments";
